# commy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  bunfig.toml  flake.nix  package.json  tsconfig.json  turbo.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/effect-model-audit/: SKILL.md  domains.md  effect-model-audit.workflow.js
.claude/skills/effect-native-audit/: SKILL.md  domains.md  effect-native-audit.workflow.js
.claude/skills/renovate/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  renovate.json5
.github/workflows/: ci.yml  pages.yml  release.yml
.hooks/: pre-commit
RELEASE-NOTES/: 0.15.0.md  0.16.0.md  0.17.0.md  0.18.0.md  0.19.0.md  0.19.1.md  0.20.0.md  0.21.0.md  0.22.0.md  README.md
biome-plugins/: effect-native-predicates.grit
clients/claude-code/: .mcp.json  README.md  flake.nix  hooks-manifest.test.ts  launch.sh  launch.test.ts  launcher.test.ts  manifests.test.ts  package.json  skills.test.ts
clients/claude-code/.claude-plugin/: plugin.json
clients/claude-code/hooks/: bun-wrap.sh  bun-wrap.test.ts  bundle.test.ts  hooks.json  hooks.test.ts  inject-session-id.test.ts  inject-session-id.ts
clients/claude-code/skills/using-commy/: SKILL.md
clients/hermes/: README.md  pyproject.toml
clients/hermes/commy/: adapter.py  connection.py  listener.py  naming.py  plugin.yaml  receive.py  session.py  transport.py
clients/hermes/scripts/: test-live.sh  test.sh
clients/hermes/tests/: _stub_mcp_server.py  _stub_post_server.py  test_adapter_connection.py  test_connection.py  test_cross_thread_live.py  test_install_layout.py  test_listener.py  test_naming.py  test_receive.py  test_registration.py  test_session.py  test_transport.py
docs/: agent-experience.md  architecture.md  claude-channel-inbound-contract.md  naming.md  releasing.md  self-hosting.md  why-zulip.md
docs/superpowers/specs/: 2026-07-03-commy-site-design.md
scripts/: assemble-npm-package.test.ts  assemble-npm-package.ts  effect-model-audit.test.ts  effect-native-audit-split.test.ts  provision-worktree.test.ts  provision-worktree.ts  publish-marketplace.test.ts  publish-marketplace.ts  release-detection.test.ts  release-detection.ts
site/: CNAME  DESIGN.md  index.html
site/field-manual/: index.html
