[project]
name = "commy-hermes"
version = "0.11.1"
description = "commy platform adapter for Hermes Agent (pattern B inbound-axis consumer)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
# No runtime dependencies: the host Hermes runtime provides BasePlatformAdapter
# and the Platform enum at pod runtime, so the plugin deliberately does not
# bundle or pin `hermes-agent` (or its tree). See README for the test recipe.
dependencies = []

[dependency-groups]
# `mcp` is the MCP Python SDK the per-topic transport (connection lifecycle,
# comms-a7j.5) drives. It is NOT a runtime dependency of the plugin: the pod's
# host Hermes already provides `mcp` (hermes-agent depends on it), the same way
# it provides `gateway`/`hermes_cli`. It lives in the dev group so the lifecycle
# tests can import the real SDK and run a real stub-server subprocess.
dev = ["pytest>=8", "pyyaml>=6", "ruff>=0.6", "mcp>=1.2"]

[tool.uv]
# Plugin payload is loaded by Hermes via directory scan, not pip-installed as a
# wheel — so this is a non-package (virtual) uv project: deps + tooling only.
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Live tests hit the real Zulip realm; excluded from the default run so
# `scripts/test.sh` stays hermetic. Run them via `scripts/test-live.sh`.
addopts = "-m 'not live'"
markers = [
    "live: end-to-end test against the real Zulip realm (run via scripts/test-live.sh)",
]

[tool.ruff]
target-version = "py311"
