[project]
name = "commy-hermes"
version = "0.15.0"
description = "commy platform adapter for Hermes Agent (pattern B inbound-axis consumer)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
# No runtime dependencies: the host Hermes runtime provides BasePlatformAdapter
# and the Platform enum at pod runtime, so the plugin deliberately does not
# bundle or pin `hermes-agent` (or its tree). See README for the test recipe.
dependencies = []

# Hermes discovers plugins by scanning this entry-point group
# (importlib.metadata.entry_points → ep.load() → register(ctx); see
# hermes_cli/plugins.py). The value is the importable module that exposes
# `register`. This is the recommended distribution mechanism: installed via
# pip, or via `services.hermes-agent.extraPythonPackages` on NixOS, then
# activated with `hermes plugins enable commy-platform`.
[project.entry-points."hermes_agent.plugins"]
commy-platform = "commy"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["commy"]

[tool.setuptools.package-data]
# Ship the manifest with the wheel for introspection and the directory-install
# fallback; entry-point discovery itself does not read it.
commy = ["plugin.yaml"]

[dependency-groups]
# `mcp` is the MCP Python SDK the per-topic transport (connection lifecycle,
# comms-a7j.5) drives. It is NOT a runtime dependency of the plugin: the pod's
# host Hermes already provides `mcp` (hermes-agent depends on it), the same way
# it provides `gateway`/`hermes_cli`. It lives in the dev group so the lifecycle
# tests can import the real SDK and run a real stub-server subprocess.
dev = ["pytest==9.1.1", "pyyaml==6.0.3", "ruff==0.15.18", "mcp==1.28.0"]

[tool.uv]
# Refuse to resolve package versions less than 7 days old — the uv mirror of
# bunfig.toml's `minimumReleaseAge = 604800`. Supply-chain defence against fresh
# malicious pushes: gives the community time to notice before we pull a release.
# This is the *enforcing* gate — it lives in the install step, so a too-fresh
# dependency fails CI for any change, whoever raised it. (Renovate's own
# `minimumReleaseAge` is only an optimisation that keeps it from opening PRs CI
# would reject.) uv records this as a relative `exclude-newer-span` in uv.lock,
# so the lock stays stable while the window is re-evaluated on every resolve.
exclude-newer = "7 days"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Live tests hit the real Zulip realm; excluded from the default run so
# `scripts/test.sh` stays hermetic. Run them via `scripts/test-live.sh`.
addopts = "-m 'not live'"
markers = [
    "live: end-to-end test against the real Zulip realm (run via scripts/test-live.sh)",
]

[tool.ruff]
target-version = "py311"
